--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
       <main id="projects">
         <div class="recipe a">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
-          <h2>CHOCOLATE MOUSSE</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
+          <img src="images/blogpost-image.jpg" />
+          <h2>BLOG POST</h2>
+          <img src="images/blogpost-image.jpg" class="time" />
           <p class="mins">20 mins</p>
           <p class="description">
             This delicious chocolate mousse will delight dinner guests of all ages!</p>
