--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
             This delicious chocolate mousse will delight dinner guests of all ages!</p>
         </div>
         <div class="recipe b">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
-          <h2>SMOKED LAMB WITH RICE</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
+          <img src="images/podcast-image.jpg" />
+          <h2>PODCAST</h2>
+          <img src="images/podcast-image.jpg" class="time" />
           <p class="mins">120 mins</p>
           <p class="description">
             Want to feel like your favorite relative came over and made you dinner? This comfort meal of smoked lamb and rice will quickly become a weekend favorite!
           </p>
         </div>
         <div class="recipe c">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
-          <h2>GOAT CHEESE SALAD</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
+          <img src="images/video-iimage.jpg" />
+          <h2>VIDEO</h2>
+          <img src="images/video-image.jpg" class="time" />
           <p class="mins">25 mins</p>
           <p class="description">
             In addition to the full flavor of goat cheese, this salad includes kale, avocado, and farro to balance it out.</p>
