--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </p>
         </div>
         <div class="recipe c">
-          <img src="images/video-iimage.jpg" />
+          <img src="images/video-image.jpg" />
           <h2>VIDEO</h2>
           <img src="images/video-image.jpg" class="time" />
           <p class="mins">25 mins</p>
