--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
       </main>
 
       <footer>
-        <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/savory.svg" class="logo">
+        <div>
+          <p class="copyright">© Kareena Mehta 2023</p>
+      </div>
       </footer>
 
     </div>
