--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <main id="projects">
         <div class="recipe a">
           <img src="images/blogpost-image.jpg" />
-          <h2>BLOG POST</h2>
+          <h2>What is the appeal in having a car?</h2>
           <img src="images/blogpost-image.jpg" class="time" />
           <p class="mins">20 mins</p>
           <p class="description">
@@ -42,7 +42,7 @@
         </div>
         <div class="recipe b">
           <img src="images/podcast-image.jpg" />
-          <h2>PODCAST</h2>
+          <h2>Digital Decisions</h2>
           <img src="images/podcast-image.jpg" class="time" />
           <p class="mins">120 mins</p>
           <p class="description">
@@ -51,7 +51,7 @@
         </div>
         <div class="recipe c">
           <img src="images/video-image.jpg" />
-          <h2>VIDEO</h2>
+          <h2>Everyday Makeup Tutorial</h2>
           <img src="images/video-image.jpg" class="time" />
           <p class="mins">25 mins</p>
           <p class="description">
@@ -65,38 +65,7 @@
           <p class="description">
             We've packed a lot into this one - shredded cabbage, carmalized onions, deep-fried chicken, chipotle mayo, half-sour pickles, and a toasted sesame bun will leave you thoroughly satisfied!</p>
         </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
+       
       </main>
 
       <footer>
