--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <main id="projects">
         <div class="recipe a">
           <img src="images/blogpost-image.jpg" />
-          <h2>What is the appeal in having a car?</h2>
+          <h2>The Appeal of Cars in American Society</h2>
           <img src="images/blogpost-image.jpg" class="time" />
-          <p class="mins">20 mins</p>
+          <p class="mins">Blog Post</p>
           <p class="description">
-            This delicious chocolate mousse will delight dinner guests of all ages!</p>
+            Cars have been a staple in American life since the late 19th century. They are associated with independence, privacy, accessibility, and flexibility. However, cars contribute to significant environmental damage, which begs the question, why have one?</p>
         </div>
         <div class="recipe b">
           <img src="images/podcast-image.jpg" />
