--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
           <img src="images/podcast-image.jpg" />
           <h2>Digital Decisions</h2>
           <img src="images/podcast-image.jpg" class="time" />
-          <p class="mins">120 mins</p>
+          <p class="mins">Podcast</p>
           <p class="description">
-            Want to feel like your favorite relative came over and made you dinner? This comfort meal of smoked lamb and rice will quickly become a weekend favorite!
+            A podcast created by Virginia Tech students about desisions about the digital world they may affect you. Stick around to see who you agree with on these desisions about the digital age.  </p>
           </p>
         </div>
         <div class="recipe c">
           <img src="images/video-image.jpg" />
           <h2>Everyday Makeup Tutorial</h2>
           <img src="images/video-image.jpg" class="time" />
-          <p class="mins">25 mins</p>
+          <p class="mins">Video</p>
           <p class="description">
-            In addition to the full flavor of goat cheese, this salad includes kale, avocado, and farro to balance it out.</p>
+           I've recently gotten into skincare and makeup products. This makeup tutorial is an easy everyday look that can be done by a beginner within minutes. It features a very natural look with affordable and minimal makeup products.  </p>
         </div>
         <div class="recipe d">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
