--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <main id="projects">
         <div class="recipe a">
           <img src="images/blogpost-image.jpg" />
-          <h2><a href="https://medium.com/@kareenamehta/what-is-the-appeal-of-having-a-car-2b4a2d278f54">Website Name The Appeal of Cars in American Society </a> </h2>
+          <h2><a href="https://medium.com/@kareenamehta/what-is-the-appeal-of-having-a-car-2b4a2d278f54">The Appeal of Cars in American Society </a> </h2>
           <img src="images/blogpost-image.jpg" class="time" />
           <p class="mins">Blog Post</p>
           <p class="description">
@@ -42,7 +42,7 @@
         </div>
         <div class="recipe b">
           <img src="images/podcast-image.jpg" />
-          <h2>Digital Decisions</h2>
+          <h2><a href="https://soundcloud.com/dnsmits/would-you-rather"> Digital Decisions </a> </h2>
           <img src="images/podcast-image.jpg" class="time" />
           <p class="mins">Podcast</p>
           <p class="description">
