--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="recipe c">
           <img src="images/video-image.jpg" />
-          <h2>Everyday Makeup Tutorial</h2>
+          <h2><a href="https://youtu.be/YOX16a7r1Pg"> Everyday Makeup Tutorial</a> </h2>
           <img src="images/video-image.jpg" class="time" />
           <p class="mins">Video</p>
           <p class="description">
