added linkedin profile

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
            I've recently gotten into skincare and makeup products. This makeup tutorial is an easy everyday look that can be done by a beginner within minutes. It features a very natural look with affordable and minimal makeup products.  </p>
         </div>
         <div class="recipe d">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
-          <h2>CHICKEN SANDWICH</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">45 mins</p>
+          <img src="images/Linkedin Profile.jpeg" />
+          <h2><a href="https://www.linkedin.com/in/kareenamehta/">Linkedin Profile</a> </h2>
+          <img src="images/Linkedin Profile.jpeg"  class="time" />
+          <p class="mins">More about me</p>
           <p class="description">
-            We've packed a lot into this one - shredded cabbage, carmalized onions, deep-fried chicken, chipotle mayo, half-sour pickles, and a toasted sesame bun will leave you thoroughly satisfied!</p>
+            Featuring my education, work experience, and other skillsets</p>
         </div>
        
       </main>
