--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Oswald&display=swap" rel="stylesheet">
   </head>
+  <link rel="stylesheet" >
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" >
+  <link integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" >
+  <linkcrossorigin="anonymous" > </linkcrossorigin>
+  <linkreferrerpolicy="no-referrer" />
+</head>
 
   <body>
 
@@ -71,6 +77,10 @@
       <footer>
         <div>
           <p class="copyright">© Kareena Mehta 2023</p>
+          <ul class="icons">
+            <li><a href="https://www.instagram.com/kareena.mehta_/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/kareenamehta/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+        </ul>
       </div>
       </footer>
 
