--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </header>
 
       <main id="projects">
-        <div class="recipe a">
+        <div class="project a">
           <img src="images/blogpost-image.jpg" />
           <h2><a href="https://medium.com/@kareenamehta/what-is-the-appeal-of-having-a-car-2b4a2d278f54">The Appeal of Cars in American Society </a> </h2>
           <img src="images/blogpost-image.jpg" class="time" />
@@ -46,7 +46,7 @@
           <p class="description">
             Cars have been a staple in American life since the late 19th century. They are associated with independence, privacy, accessibility, and flexibility. However, cars contribute to significant environmental damage, which begs the question, why have one?</p>
         </div>
-        <div class="recipe b">
+        <div class="project b">
           <img src="images/podcast-image.jpg" />
           <h2><a href="https://soundcloud.com/dnsmits/would-you-rather"> Digital Decisions </a> </h2>
           <img src="images/podcast-image.jpg" class="time" />
@@ -55,7 +55,7 @@
             A podcast created by Virginia Tech students about desisions about the digital world they may affect you. Stick around to see who you agree with on these desisions about the digital age.  </p>
           </p>
         </div>
-        <div class="recipe c">
+        <div class="project c">
           <img src="images/video-image.jpg" />
           <h2><a href="https://youtu.be/YOX16a7r1Pg"> Everyday Makeup Tutorial</a> </h2>
           <img src="images/video-image.jpg" class="time" />
@@ -63,7 +63,7 @@
           <p class="description">
            I've recently gotten into skincare and makeup products. This makeup tutorial is an easy everyday look that can be done by a beginner within minutes. It features a very natural look with affordable and minimal makeup products.  </p>
         </div>
-        <div class="recipe d">
+        <div class="project d">
           <img src="images/Linkedin Profile.jpeg" />
           <h2><a href="https://www.linkedin.com/in/kareenamehta/">Linkedin Profile</a> </h2>
           <img src="images/Linkedin Profile.jpeg"  class="time" />
