--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- Changed title to my name. The title will show up in the browser tab! -->
     <title>Kareena Mehta</title>
+    <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +28,8 @@
         <div class="wrapper">
           <h1>Kareena Mehta</h1>
           <p class="bio">
-            I am a sophomore majoring in Smart and Sustainable Cities and minoring in Sociology. The projects below are the ones that I have been working on in ENGL 3844: Writing and Digital Media. 
+            <ol>Smart and Sustainable Cities Major</ol> 
+            <ol>Sociology Minor</ol> 
           </p>
           <div class="buttonBox">
             <a class="myButton"href="#projects">Go</a>
