--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <div class="wrapper">
           <h1>Kareena Mehta</h1>
           <p class="bio">
-            <ol>Smart and Sustainable Cities Major</ol> 
-            <ol>Sociology Minor</ol> 
+            I am a sophomore majoring in Smart and Sustainable Cities and minoring in Sociology. The projects below are the ones that I have been working on in ENGL 3844: Writing and Digital Media.
           </p>
           <div class="buttonBox">
             <a class="myButton"href="#projects">Go</a>
@@ -37,7 +36,7 @@
       </header>
 
       <main id="projects">
-        <div class="project a">
+        <div class="project">
           <img src="images/blogpost-image.jpg" />
           <h2><a href="https://medium.com/@kareenamehta/what-is-the-appeal-of-having-a-car-2b4a2d278f54">The Appeal of Cars in American Society </a> </h2>
           <img src="images/blogpost-image.jpg" class="time" />
@@ -45,7 +44,7 @@
           <p class="description">
             Cars have been a staple in American life since the late 19th century. They are associated with independence, privacy, accessibility, and flexibility. However, cars contribute to significant environmental damage, which begs the question, why have one?</p>
         </div>
-        <div class="project b">
+        <div class="project">
           <img src="images/podcast-image.jpg" />
           <h2><a href="https://soundcloud.com/dnsmits/would-you-rather"> Digital Decisions </a> </h2>
           <img src="images/podcast-image.jpg" class="time" />
@@ -54,7 +53,7 @@
             A podcast created by Virginia Tech students about desisions about the digital world they may affect you. Stick around to see who you agree with on these desisions about the digital age.  </p>
           </p>
         </div>
-        <div class="project c">
+        <div class="project">
           <img src="images/video-image.jpg" />
           <h2><a href="https://youtu.be/YOX16a7r1Pg"> Everyday Makeup Tutorial</a> </h2>
           <img src="images/video-image.jpg" class="time" />
@@ -62,7 +61,7 @@
           <p class="description">
            I've recently gotten into skincare and makeup products. This makeup tutorial is an easy everyday look that can be done by a beginner within minutes. It features a very natural look with affordable and minimal makeup products.  </p>
         </div>
-        <div class="project d">
+        <div class="project">
           <img src="images/Linkedin Profile.jpeg" />
           <h2><a href="https://www.linkedin.com/in/kareenamehta/">Linkedin Profile</a> </h2>
           <img src="images/Linkedin Profile.jpeg"  class="time" />
