--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <div class="wrapper">
           <h1>Kareena Mehta</h1>
           <p class="bio">
-            I am a sophomore majoring in Smart and Sustainable Cities and minoring in Sociology. The projects below are the ones that I have been working on in ENGL 3844: Writing and Digital Media.
+            I am a sophomore majoring in Smart and Sustainable Cities and minoring in Sociology. 
+            The projects below are the ones that I have been working on in ENGL 3844: Writing and Digital Media.
+            
           </p>
           <div class="buttonBox">
             <a class="myButton"href="#projects">Go</a>
