--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <p class="bio">
             I am a sophomore majoring in Smart and Sustainable Cities and minoring in Sociology. 
             The projects below are the ones that I have been working on in ENGL 3844: Writing and Digital Media.
-            
+            Each project stems from a hobby. For instance, the blog post relates to my major and highlights my love of cars, travel, and the environment. The podcast highlights my use of using the internet, social media, and streaming services. Lastly, the video demonstrates my love of makeup and skincare.
+
           </p>
           <div class="buttonBox">
             <a class="myButton"href="#projects">Go</a>
