--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p class="bio">
             I am a sophomore majoring in Smart and Sustainable Cities and minoring in Sociology. 
             The projects below are the ones that I have been working on in ENGL 3844: Writing and Digital Media.
-            Each project stems from a hobby. For instance, the blog post relates to my major and highlights my love of cars, travel, and the environment. The podcast highlights my use of using the internet, social media, and streaming services. Lastly, the video demonstrates my love of makeup and skincare.
+            Each project was inspired from a hobby of mine. The blog post relates to my major, and comes from my love of the environment as well as my love of cars and traveling. The video was inspired by my love of using social media, the internet, and streaming services. Lastly, the video was inspired by my love of skincare and makeup products. 
 
           </p>
           <div class="buttonBox">
